# CollisionChecker_PCL

./: .gitignore  CMakeLists.txt  CollisionChecker.cpp  compile.sh  prepare_dependencies.sh  tester.py  vis_tools.h
src/: CollisionChecker.cpp  vis_tools.cpp  vis_tools.h
